fixing alignment of projects

--- a/styles.css
+++ b/styles.css
@@ -190,3 +190,13 @@ footer p {
     text-align: center;
   }
 
+.project-list {
+  text-align: left;
+  margin-top: 1rem;
+  padding-left: 1.5rem;
+}
+
+.project-list li {
+  margin-bottom: 0.75rem;
+  line-height: 1.5;
+}
